boots list action

--- a/data/interfaces/list_boots.ui
+++ b/data/interfaces/list_boots.ui
@@ -73,6 +73,11 @@
                             <property name="title">Duration</property>
                           </object>
                         </child>
+                        <child>
+                          <object class="GtkColumnViewColumn">
+                            <property name="id">action</property>
+                          </object>
+                        </child>
                       </object>
                     </child>
                   </object>
