--- a/data/interfaces/list_boots.ui
+++ b/data/interfaces/list_boots.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.94.1 -->
+<!-- Created with Cambalache 0.96.0 -->
 <interface>
   <requires lib="gtk" version="4.16"/>
   <requires lib="libadwaita" version="1.6"/>
@@ -16,6 +16,7 @@
                     <property name="vexpand">True</property>
                     <child>
                       <object class="GtkColumnView" id="boots_browser">
+                        <property name="css-classes">background</property>
                         <property name="hexpand">True</property>
                         <property name="model">
                           <object class="GtkNoSelection">
